Prevent text overflow

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -10,3 +10,8 @@
 .page-content {
     background-color: aqua;
 }
+
+.break {
+    word-break: break-all;
+    overflow-wrap: anywhere;
+}
